coreções de bugs e adicionando novos metedos